[tool.poetry]
name = "constanta-test"
version = "0.1.0"
description = ""
authors = ["artur <shadaraevd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
databases = {extras = ["asyncpg"], version = "^0.6.0"}
alembic = "^1.8.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
orm = "^0.3.1"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
